tests/paczka1/small_fuzzy/97478520.err
Error in line 1: hRIHV3c S703 16,7
Error in line 5: o1e50x7 A951 86,8
Error in line 6: hRIHV3c S453 4,8
